fluxcd/apps/overlays/production/mealie/deployment-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:nightly
  volumeClaimTemplates:
  - metadata:
      name: mealie-data
    spec:
      storageClassName: ceph-rbd-retain
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie-postgres
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: postgres
        image: docker.io/library/postgres:15
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      storageClassName: ceph-rbd-retain
