fluxcd/apps/overlays/production/mealie/namespace-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie
  namespace: song-of-time
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: song-of-time
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie-postgres
  namespace: song-of-time
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-postgres
  namespace: song-of-time
