fluxcd/apps/overlays/production/mealie/service-mealie-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    policy.prplanit.com/ingress: "true"
