fluxcd/apps/overlays/production/mealie/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  annotations:
    lbipam.cilium.io/ips: "172.22.30.123"
    lbipam.cilium.io/sharing-key: "song-of-storms"
    lbipam.cilium.io/sharing-cross-namespace: "*"
