fluxcd/apps/overlays/production/mealie/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Content & Media (Temple of Time🏛️)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "recipes.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mealie
          port: 9000
